<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shutdown Remote</string>
    <string name="title">SHUTDOWN REMOTE</string>
    <string name="subtitle">PC im selben WLAN zur gewählten Uhrzeit ausschalten</string>
    <string name="pc_address">PC-Adresse</string>
    <string name="pin">6-stelliger PIN</string>
    <string name="choose_time">Uhrzeit auswählen</string>
    <string name="send">ABSCHALTUNG PLANEN</string>
    <string name="ready">Bereit</string>
</resources>
